--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="refresh" content="0; url=http://example.com">
         <script type="text/javascript">
-            window.location.href = "https://b6a6436c403a.ngrok.io/"
+            window.location.href = "http://513c64fb7e16.ngrok.io/"
         </script>
         <title>Page Redirection</title>
     </head>
