--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
         <meta charset="UTF-8">
         <meta http-equiv="refresh" content="0; url=http://example.com">
         <script type="text/javascript">
-            window.location.href = "http://513c64fb7e16.ngrok.io/"
+            window.location.href = "https://513c64fb7e16.ngrok.io/"
         </script>
         <title>Page Redirection</title>
     </head>
     <body>
         <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
-        If you are not redirected automatically, follow this <a href='https://b6a6436c403a.ngrok.io/'>link</a>.
+        If you are not redirected automatically, follow this <a href='https://513c64fb7e16.ngrok.io/'>link</a>.
     </body>
 </html>
